--- a/invasive_species_finder/pubspec.yaml
+++ b/invasive_species_finder/pubspec.yaml
@@ -14,6 +14,13 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  google_maps_flutter: ^2.5.0 # Use the latest version available
+  camera: ^0.10.26
+  path_provider: ^2.0.7
+  image_picker: ^0.8.4+4
+  image_cropper: ^1.4.1
+  firebase_core: ^1.6.0
+
 
 dev_dependencies:
   flutter_test:
