--- a/invasive_species_finder/pubspec.yaml
+++ b/invasive_species_finder/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
   sdk: '>=3.1.2 <4.0.0'
 
 dependencies:
+  camera: ^0.10.5+5
+  image_picker: ^0.8.2
   flutter:
     sdk: flutter
   flutter_localizations:
