--- a/invasive_species_finder/pubspec.yaml
+++ b/invasive_species_finder/pubspec.yaml
@@ -11,7 +11,8 @@ environment:
 
 dependencies:
   camera: ^0.10.5+5
-  image_picker: ^0.8.2
+  image_picker: ^0.8.3
+  path_provider: ^2.0.2
   flutter:
     sdk: flutter
   flutter_localizations:
