--- a/invasive_species_finder/pubspec.yaml
+++ b/invasive_species_finder/pubspec.yaml
@@ -13,10 +13,14 @@ dependencies:
   camera: ^0.10.5+5
   image_picker: ^0.8.3
   path_provider: ^2.0.2
+  flutter_map: ^5.0.0
+  latlong2: ^0.9.0
+  flutter_map_marker_cluster: ^1.0.0
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
