map page finished

--- a/invasive_species_finder/pubspec.yaml
+++ b/invasive_species_finder/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  google_maps_flutter: ^2.1.2
+  geolocator: ^7.0.3
+  permission_handler: ^11.0.1
 
 dev_dependencies:
   flutter_test:
