--- a/invasive_species_finder/android/app/src/main/AndroidManifest.xml
+++ b/invasive_species_finder/android/app/src/main/AndroidManifest.xml
@@ -34,5 +34,9 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data
+                android:name="com.google.android.geo.API_KEY"
+                android:value="AIzaSyBCWecXEQp0QRjVOXfgjfAgcHi1f5o0mXA" />
+
     </application>
 </manifest>
