--- a/invasive_species_finder/pubspec.yaml
+++ b/invasive_species_finder/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   badges: ^2.0.3
   json_theme: ^4.0.0
   flutter_markdown: ^0.6.13
+  google_maps_flutter: ^2.0.4
+  geolocator: ^8.1.4
+  permission_handler: ^11.0.0
 
 dev_dependencies:
   flutter_test:
