add the google map api key

--- a/invasive_species_finder/android/app/src/main/AndroidManifest.xml
+++ b/invasive_species_finder/android/app/src/main/AndroidManifest.xml
@@ -1,13 +1,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         package="com.android.camera">
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
 
     <application
         android:label="invasive_species_finder"
-        android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        >
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -34,5 +35,7 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data android:name="com.google.android.geo.API_KEY"
+                   android:value="AIzaSyCInsSrB0sEYiPTnnxotOgQv9mp0v337Ng"/>
     </application>
 </manifest>
