--- a/invasive_species_finder/pubspec.yaml
+++ b/invasive_species_finder/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   google_maps_flutter: ^2.0.4
   geolocator: ^8.1.4
   permission_handler: ^11.0.0
+  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
