--- a/invasive_species_finder/pubspec.yaml
+++ b/invasive_species_finder/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   geolocator: ^8.1.4
   permission_handler: ^11.0.0
   flutter_dotenv: ^5.0.2
+  flutter_riverpod: ^2.4.3
 
 dev_dependencies:
   flutter_test:
