--- a/invasive_species_finder/pubspec.yaml
+++ b/invasive_species_finder/pubspec.yaml
@@ -29,6 +29,10 @@ dependencies:
   permission_handler: ^11.0.0
   flutter_dotenv: ^5.0.2
   flutter_riverpod: ^2.4.3
+  firebase_core: ^2.22.0
+  firebase_auth: ^4.13.0
+  cloud_firestore: ^4.13.0
+  firebase_ui_auth: ^1.10.0
 
 dev_dependencies:
   flutter_test:
