--- a/invasive_species_finder/pubspec.yaml
+++ b/invasive_species_finder/pubspec.yaml
@@ -33,12 +33,22 @@ dependencies:
   firebase_auth: ^4.13.0
   cloud_firestore: ^4.13.0
   firebase_ui_auth: ^1.10.0
+  freezed_annotation: ">=2.4.1"
+  json_annotation: ">=4.8.1"
+  riverpod_annotation: ">=2.2.0"
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  build_runner: ">=2.3.3"
+  freezed: ">=2.4.3"
+  json_serializable: ">=6.7.1"
+  riverpod_generator: ">=2.3.3"
+  riverpod_lint: ">=2.3.0"
+  custom_lint: ">=0.5.3"
 
 flutter:
   uses-material-design: true
@@ -50,3 +60,4 @@ flutter:
     # Add assets from the images directory to the application.
     - assets/images/
     - assets/theme/
+    - assets/initialData/
