--- a/invasive_species_finder/pubspec.yaml
+++ b/invasive_species_finder/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   freezed_annotation: ">=2.4.1"
   json_annotation: ">=4.8.1"
   riverpod_annotation: ">=2.2.0"
+  flex_color_scheme: ^7.3.1
 
 
 dev_dependencies:
